# StickerInspect

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: platform.cmake  protobuf.cmake
src/: CMakeLists.txt  network_connection.pb.h
src/dll/: CMakeLists.txt  dllmain.cpp  dllmain.h  interfaces.h  modules.h  timer.cpp  timer.h
src/dll/cs2_sdk/: schema.cpp  serversideclient.h
src/dll/cs2_sdk/entity/: cbaseentity.h  cbaseplayercontroller.h  cbaseplayerpawn.h  weapons.h
src/dll/gui/: gui.cpp  gui.h  imgui_main.cpp  imgui_main.h
src/dll/gui/panels/menubar/: menubar.h
src/dll/gui/panels/stickerinspect/: stickerinspect.cpp  stickerinspect.h
src/dll/utils/: common.h  crc32.h  module.h  oslink.h  plat.h
src/gui/: gui.h
src/gui/panels/menubar/: menubar.cpp
src/gui/panels/stickerinspect/: stickerinspect.cpp  stickerinspect.h
src/launcher/: CMakeLists.txt  main.cpp
src/standalone/: CMakeLists.txt
src/test/: main.cpp
